	PR c++/27309 	* class.c (add_method): Call grok_special_member_properties. 	* decl.c (grokdeclarator): Don't call it here. 	(copy_fn_p): A TEMPLATE_DECL is never a copy constructor or 	assignment operator.  Set TYPE_HAS_CONSTURCTOR if DECL is a 	constructor. 	(start_method): Don't call grok_special_member_properties. 	* method.c (implicitly_declare_fn): Likewise. 	* pt.c (instantiate_class_template): Likewise. 	* decl2.c (grokfield): Likewise. 	PR c++/27309 	* g++.dg/parser/ctor5.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113473 138bc75d-0d04-0410-961f-82ee72b054a4